--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,9 @@
 		],
 		// "baseUrl": ".",
 		"paths": {
-			"@/*": ["./src/*"]
-		},
+      "@/*": ["./src/*"],
+      "@/.storyblok/*": ["./src/.storyblok/*"] // This ensures paths resolve to the correct folder
+    },
 		"types": ["@testing-library/jest-dom", "jest"]
 	},
 	"include": [
